--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
         
        </body>
        </html>
+<!-- lista ordenada -->
+<h3>lista ordenada</h3>
+<ol type="I">
+  <li>Dueño del Producto</li>
+  <li>Scrum Master</li>
+  <li>Equipo de Desarrollo</li>
+</ol>
+<!-- lista no ordenada -->  
+<h3>Lista no ordenada</h3>
+<ul style="list-style-type: square;">
+  <li>Sprint</li>
+  <li>Backlog del producto</li>
+  <li>Backlog del Sprint</li>
+  <li>Incremento</li>
+</ul>
 
       
    
