--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <li>Backlog del Sprint</li>
     <li>Incremento</li>
   </ul><br>
-	<h1>Quienes somos?</h1>
+	<a target="_blank" href="https://www.sena.edu.co/es-co/sena/Paginas/quienesSomos.aspx">
+	  <h1>Quienes somos?</h1>
+	</a>
 	<a target="_blank" href="https://www.sena.edu.co/es-co/sena/Paginas/quienesSomos.aspx">
     <img src="IMG/sena.png" width="25%">
 	</a>
